# plumb

./: .gitignore  CLAUDE.md  README.md  constraints.txt  pyproject.toml
.acceptance/: RESULT.md  authoring-manifest.json  brief.md  fast-lane-assessment.json  fast-trace.json  review-evidence.json
details/: 2x2_cube_36_cold.cert.yaml  2x2_cube_36_cold.spec.yaml  2x4_triangle.capability-gap.json  2x4_triangle.fast-lane-assessment.json  2x4_triangle.spec.yaml  3x3_cube_36.cert.yaml  3x3_cube_36.spec.yaml  armchair_caddy.cert.yaml  armchair_caddy.design-review.yaml  armchair_caddy.spec.yaml  built_up_2x4.design-review.yaml  built_up_2x4.spec.yaml  deck_ledger_example.py  family_birdhouse.cert.yaml  family_birdhouse.design-review.yaml  family_birdhouse.spec.yaml  floating_vanity.compact.project.yaml  frameless_base_cabinet.project.yaml  frameless_base_run.compact.project.yaml  platform.spec.yaml  rock_anchor.spec.yaml  sit_reach_box.spec.yaml  sit_reach_frame.spec.yaml  site.spec.yaml  step_stool.spec.yaml  trebuchet.spec.yaml  tree_attachment.spec.yaml  trolley_launch.spec.yaml  two_by_four_square_frame.cert.yaml  two_by_four_square_frame.design-review.yaml  two_by_four_square_frame.spec.yaml  wooden_diaper_caddy.cert.yaml  wooden_diaper_caddy.spec.yaml
docs/: FRAMEWORK_ROADMAP.md
scripts/: _site_overview.py  benchmark.py  blind_caddy_certification.py  build_inspector.py  built_up_2x4_documents.py  cabinetry_consumer_manual.py  cabinetry_cutting_guide.py  cabinetry_documents.py  cabinetry_project_report.py  caddy_documents.py  capture_frozen_truth.py  consolidated_report.py  double_vanity_documents.py  double_vanity_study.py  family_birdhouse_report.py  probe_stool.py  refreeze_from_spec.py  regen_baselines.py  render_built_up_2x4_views.py  render_caddy_views.py  render_sitframe_views.py  render_sitreach_views.py  render_stool_views.py  render_trebuchet_views.py  single_detail_report.py  smoke_progression.py
src/: __init__.py
tests/: baseline_lib.py  conftest.py  product_gate_integrity.py  scope_manifest.py  test_2x4_triangle.py  test_action_frames.py  test_affected_region.py  test_armchair_caddy_e2e.py  test_authored_identity.py  test_baselines.py  (+169 more)
(+391 files in other folders)
